fix console errors & word wrapping

--- a/src/app/torrents-table/torrents-table.component.scss
+++ b/src/app/torrents-table/torrents-table.component.scss
@@ -7,6 +7,11 @@
   pointer-events: none;
 }
 
+.mobile-status {
+  margin: 0 10px;
+  cursor: pointer;
+}
+
 .torrent-table-container {
     display: flex;
     flex-direction: column;
