--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,8 @@ body {
 .grow-6 { flex-grow: 0.6; }
 .grow-7 { flex-grow: 0.7; }
 
+.word-break-all { word-break: break-all; }
+
 /** Styles applicable for all material dialogs */
 .generic-dialog .mat-dialog-container {
   padding: 0;
